--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,2 +1,28 @@
-<h1>Homes#top</h1>
-<p>Find me in app/views/homes/top.html.erb</p>
+<div class="container px-5 px-sm-0">
+ <div class="row">
+  <div class="col-md-8">
+   <div class="border p-2 mb-3 bg-light text-dark text-center">
+    <h3> <span>新着</span>　回答募集</h3>
+    </div>
+    <p>以下、テーブルで新着質問5件ぐらい表示</p>
+
+</div>
+<div class="col-md-3 offset-md-1 shadow-sm">
+  <section class="title_area">
+      <h2><span>Q&A</span><br>
+            ご利用ガイド</h2>
+  </section>
+  <section>
+      <h4>はじめに</h4>
+       <div class="text_area">
+         <p>●　質問をするには利用登録が必要です。登録の際は<%= link_to "こちら", new_user_registration_path,class: "text_link" %>をご覧ください。（ウェブブラウザー上での質問の閲覧は登録不要です）</p>
+         <p>●　ご利用いただく際には「<a href="#" class="text_link">サイトのご利用について</a>」「<a href="#" class="text_link">利用方法</a>」もご一読ください。</p>
+    <!-- <p class="text_deco">その他ご不明な点については、<a href="#" class="text_link">ヘルプページ</a>もあわせてご確認ください。</p> -->
+          </div>
+  </section>
+
+
+</div>
+
+</div>
+</div>
