--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,2 +1,41 @@
-<h1>Users#edit</h1>
-<p>Find me in app/views/users/edit.html.erb</p>
+ 
+<div class="container">
+  <div class="row no-gutters">
+    <div class="col-sm-12 col-md-8 mx-2 mx-sm-auto text-center shadow-lg rounded px-0 my-5">
+    <h5 class="text-dark bg-light py-4 mb-0">プロフィール編集</h5>
+    
+  <% if @user.errors.any? %>
+   <div id="error_explanation" class="alert alert-danger">
+     <h3><%= @user.errors.count %>error prohibited this obj from being saved:</h3>
+     <ul>
+       <% @user.errors.full_messages.each do |message| %>
+         <li><%= message %></li>
+       <% end %>
+     </ul>
+   </div> 
+  <% end %>
+    
+    
+    <div class="form-body p-4">
+     
+   <%= form_with model: @user do |f| %>
+    <div class="input-group mb-3">
+      <label for="user_image">アイコン画像</label>
+      <%= f.file_field :image_icon, placeholder: "プロフィール画像", accept: "image/*",class:"form-control-file user_image" %> 
+    </div>
+    <div class="text-left">
+      <label for="user_name">名前</label>
+      <%= f.text_field :name, autofocus: true,class:"form-control name"%>
+    </div>
+    <div class="text-left">
+      <label for="user_introduction">自己紹介</label>
+      <%= f.text_area :introduction, autofocus: true,class:"form-control introduction"%>
+    </div>
+    <div class="form-group">  
+      <%= f.submit "更新",class:"btn btn-lg btn-block btn-info mt-5" %>
+    </div>
+   <% end %>
+
+    </div>
+  </div>
+</div>
