--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,2 +1,30 @@
-<h1>Users#show</h1>
-<p>Find me in app/views/users/show.html.erb</p>
+
+
+<div class="container">
+  <div class="row">
+    <div class="col-sm-12 col-md-8 col-lg-7 px-5 px-sm-0 mx-auto">
+  <h2>User info</h2>
+<div>
+  
+  <table class="table">
+   <tbody><tr></tr>
+    <tr>
+      <th>名前</th>
+    <!--   <th>< %= @user.name %></th> -->
+    </tr>
+    <tr>
+      <th>自己紹介</th>
+      
+    </tr>
+    </tbody></table>
+</div>
+<div class="row">
+    <%= link_to  edit_user_path,class:"btn btn-outline-secondary btn-block" do %>
+    <i class="fa-solid fa-user-gear"></i></i>
+    <% end %>
+</div>
+
+    </div>
+  </div>
+ 
+</div>
