confirmをいったんあきらめた

--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -1,2 +1,15 @@
-<h1>Questions#show</h1>
-<p>Find me in app/views/questions/show.html.erb</p>
+<div class="container px-5 px-sm-0">
+ <div class="row">
+  <div class="col-md-8">
+    
+
+    
+       <h1>SHOW</h1>
+
+   
+    
+    
+    
+    </div>
+  </div>
+</div>
