--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,11 +10,11 @@
    <tbody><tr></tr>
     <tr>
       <th>名前</th>
-    <!--   <th>< %= @user.name %></th> -->
+     <th><%= @user.name %></th> 
     </tr>
     <tr>
       <th>自己紹介</th>
-      
+      <th><%= @user.introduction %></th> 
     </tr>
     </tbody></table>
 </div>
