--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -1,2 +1,38 @@
-<h1>Questions#index</h1>
-<p>Find me in app/views/questions/index.html.erb</p>
+<div class="container px-5 px-sm-0">
+ <div class="row">
+  <div class="col-md-8">
+    
+       <h1></h1>
+
+   
+     <table class="table table-hover table-inverse">
+       <thead>
+         <tr>
+           <th colspan="1"></th>
+           <th>Title</th>
+           <th>Opinion</th>
+
+         </tr>
+       </thead>
+ 
+       <tbody>
+       <% @questions.each do |book| %>
+         <tr>
+            <td><%= link_to user_path(book.user.id) do %>
+              <%= image_tag book.user.get_profile_image(100,100) %>
+              <% end %></td>
+            <td><%=link_to book.title, book_path(book.id) %></td>
+            <td><%= book.body %></td>
+         </tr>
+       <% end %>
+       </tbody>
+     </table>
+    
+    
+    
+    
+    
+    
+    </div>
+  </div>
+</div>
