--- a/app/views/questions/new.html.erb
+++ b/app/views/questions/new.html.erb
@@ -7,11 +7,11 @@
 <%= form_with model: @question do |f| %>
   <div class="form-group">
   <label>質問文</label>
-  <%= f.text_area :question_content, class:"form-control"%>
+  <%= f.text_area :question_content, class:"form-control book_body"%>
  </div>  
  <div class="form-group">
  <label>画像</label>
-  <%= f.file_field :image, placeholder: "画像", accept: "image/*"%>
+  
  </div>
  <div class="d-grid gap-2 d-md-flex justify-content-md-end">
   <%= f.submit '確認',class:"btn btn-success me-md-2" %>
