userのcrate以外何とかなった

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -66,7 +66,7 @@
            <ul class="navbar-nav">
             <div class="d-flex">
               <div class="p-2"> 
-               <a class="nav-item nav-link active" aria-current="page" href="#">Q&A一覧</a>
+               <a class="nav-item nav-link active" aria-current="page" href='/questions'>Q&A一覧</a>
               </div>
               <div class="p-2">
                <a class="nav-item nav-link disabled" aria-current="page" href="#">カテゴリ一覧</a>
