--- a/app/views/questions/new.html.erb
+++ b/app/views/questions/new.html.erb
@@ -11,10 +11,10 @@
  </div>  
  <div class="form-group">
  <label>画像</label>
-  
+  <%= f.file_field :image, placeholder: "画像", accept: "image/*",class:"book_body"%>
  </div>
  <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-  <%= f.submit '確認',class:"btn btn-success me-md-2" %>
+  <%= f.submit '投稿',class:"btn btn-success me-md-2" %>
    </div>
 <% end %>
 
