--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -11,7 +11,8 @@
        <tbody>
        <% @questions.each do |question| %>
          <tr>
-            <td><%=link_to question.question_content, question_path(question.id) %></td>
+            <td><%=link_to question.question_content, question_path(question.id) %>
+            <%= question.created_at.strftime('%Y/%m/%d') %></td>
          </tr>
 
        <% end %>
