--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -32,6 +32,29 @@
          　　</tr>
        </tbody>
      </table>
+     
+     <div class="row">
+    <%= link_to  new_question_answer_path(@question.id),class:"btn btn-outline-secondary btn-block" do %>
+    <!-- <i class="fa-solid fa-user-gear"></i>-->
+    回答
+    <% end %>
+    </div>
+     
+    
+     <table class="table">
+      <tbody>
+          <tr>
+           <td> <% @question.answers.each do |answer| %></td>
+          </tr>
+           <tr>
+           <td><%= answer.user.name %></td>
+          </tr>
+          <tr>
+           <td><%= answer.body %></td>
+          </tr>
+               <% end %>
+       </tbody>
+     </table>
     
     
     </div>
