--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -20,7 +20,7 @@
 </div>
 <div class="row">
     <%= link_to  edit_user_path,class:"btn btn-outline-secondary btn-block" do %>
-    <i class="fa-solid fa-user-gear"></i></i>
+    <i class="fa-solid fa-user-gear"></i>
     <% end %>
 </div>
 
