--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -1,10 +1,7 @@
 <div class="container px-5 px-sm-0">
  <div class="row">
   <div class="col-md-8">
-    
 
-    
-   <h1>SHOW</h1>
    <table class="table">
    
     <tbody>
@@ -43,14 +40,12 @@
     
      <table class="table">
       <tbody>
-          <tr>
-           <td> <% @question.answers.each do |answer| %></td>
-          </tr>
+            <% @question.answers.each do |answer| %>
            <tr>
            <td><%= answer.user.name %></td>
           </tr>
           <tr>
-           <td><%= answer.body %></td>
+           <td><%= answer.answer_content %></td>
           </tr>
                <% end %>
        </tbody>
