--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -87,7 +87,11 @@
         </div>
     </header2>
     
+    <body>
+		
     <%= yield %>
+    
+    </body>
     
     <footer class="bg-dark text-white pt-3 pb-3">
       <div class="container">
