--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -25,6 +25,46 @@
 </div>
 
     </div>
+    
+    <!-- ユーザーの投稿一覧 -->
+ <div class="col-md-8 offset-md-1">
+  <h2>UsersQuestion</h2>
+
+      <table class="table table-hover table-inverse">
+
+ 
+       <tbody>
+       <% @questions.each do |question| %>
+         <tr>
+            <td><%=link_to question.question_content, question_path(question.id) %>
+            <%= question.created_at.strftime('%Y/%m/%d') %></td>
+         </tr>
+
+       <% end %>
+       </tbody>
+     </table>
+     <h2>UsersAnswer</h2>
+
+      <table class="table table-hover table-inverse">
+
+ 
+       <tbody>
+       <% @answers.each do |answer| %>
+         <tr>
+            <td><%=link_to answer.answer_content, question_path(answer.id) %>
+            <%= answer.created_at.strftime('%Y/%m/%d') %></td>
+         </tr>
+
+       <% end %>
+       </tbody>
+     </table> 
+     
+    
+
+ </div>
+    
+    
+    
   </div>
  
 </div>
