--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -4,7 +4,20 @@
    <div class="border px-3 my-3 bg-light text-dark text-center">
     <h3 class="p-2"> <span>新着</span>　回答募集</h3>
     </div>
-    <p>以下、テーブルで新着質問5件ぐらい表示</p>
+    <p>～以下、テーブルで新着質問5件ぐらい表示予定～</p>
+      <table class="table table-hover table-inverse">
+
+ 
+       <tbody>
+       <% @questions.each do |question| %>
+         <tr>
+            <td><%=link_to question.question_content, question_path(question.id) %>
+            <%= question.created_at.strftime('%Y/%m/%d') %></td>
+         </tr>
+
+       <% end %>
+       </tbody>
+     </table>
 
 </div>
 <div class="col-md-3 offset-md-1 shadow-sm">
