退会機能の前に管理者機能ができた、次は退会機能

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -95,12 +95,14 @@
     
     <footer class="bg-dark text-white pt-3 pb-3">
       <div class="container">
-        <div class="row no-gutters">
+        <div class="row no-gutters justify-content-between">
+
           <div class="col-md-6">
             <p>文鳥をより知っていけるコミュニティサイト</p>
             <%= image_tag('logo4.png') %>
           </div>
-          <div class="col-md-8">
+          <div class="col-md-1 pull-right">
+            <a class="navbar-brand p-3" href="/admin/sign_in"><%= image_tag 'logo7.png', :size =>'50x50',class:'logo'%></a>
           </div>
         </div>
       </div>
