--- a/app/views/admin/dashboards/index.html.erb
+++ b/app/views/admin/dashboards/index.html.erb
@@ -2,9 +2,11 @@
 <ul>
   <% @users.each do |user| %>
     <li>
-      <%= user.name %> - <%= user.email %>
-      <%= link_to '削除', admin_user_path(user), method: :delete, data: { confirm: '本当に削除しますか？' } %> 
-    
+      <%= user.is_valid %>＝<%= user.name %> - <%= user.email %>
+      <%= link_to "退会", withdrawl_admin_user_path(user), method: :patch,data: { confirm: '本当に退会しますか？' } %>
+      <%= link_to "退会を取り消す", unwithdrawl_admin_user_path(user), method: :patch %>
+      <%= link_to '削除', admin_user_path(user), method: :delete, data: { confirm: '本当に削除しますか？' } %>
+
     </li>
   <% end %>
 </ul>
