--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -13,6 +13,10 @@
       <%= link_to 'ログアウト', destroy_admin_session_path, method: :delete %>
     </div>
   <% end %>
+      <%= link_to "ユーザー一覧", admin_dashboards_path %>
+      <%= link_to "カテゴリ一覧", admin_categories_path %>
+      <%= link_to "コメント一覧", admin_dashboards_path %>
+  
   <%= yield %>
 </body>
 </html>
