--- a/app/views/public/questions/new.html.erb
+++ b/app/views/public/questions/new.html.erb
@@ -13,6 +13,12 @@
  <label>画像</label>
   <%= f.file_field :image, placeholder: "画像", accept: "image/*",class:"book_body"%>
  </div>
+ <div>
+  
+  
+  
+  
+ </div>
  <div class="d-grid gap-2 d-md-flex justify-content-md-end">
   <%= f.submit '投稿',class:"btn btn-success me-md-2" %>
    </div>
