--- a/app/views/admin/categories/index.html.erb
+++ b/app/views/admin/categories/index.html.erb
@@ -2,7 +2,7 @@
   <div class=".col-xs-3">
     
     
-<%= form_with url: admin_categories_path ,method: :post,model: @category, local: true do |f| %>
+<%= form_with model: @category, url: admin_categories_path ,method: :post, local: true do |f| %>
   <label>カテゴリー名</label>
   <%= f.label :name,'カテゴリー名' %>
    
