--- a/app/views/public/questions/show.html.erb
+++ b/app/views/public/questions/show.html.erb
@@ -45,17 +45,26 @@
      <table class="table">
       <tbody>
             <% @question.answers.each do |answer| %>
-           <tr>
-           <td><%= answer.user.name %></td>
-          </tr>
-          <tr>
-           <td><%= answer.answer_content %></td>
-          </tr>
-           <% if answer.user == current_user %>
-         <tr><td>
-             <%= link_to question_path(answer.question.id), method: :delete, data: {confirm: "削除しますか"}  do %>
-         <i class="fa-solid fa-trash-can"></i>
-             <% end %></td></tr>
+              <tr><td>
+              <%= answer.user.name %></td></tr>
+               <tr><td>
+              <%= answer.answer_content %></td></tr>
+            <% if answer.user == current_user %>
+               <tr><td>
+              <%= link_to question_path(answer.question.id), method: :delete, data: {confirm: "削除しますか"}  do %>
+               <i class="fa-solid fa-trash-can"></i>
+              <% end %></td></tr>
+              <% end %>
+            <% if @question.user == current_user %>
+               <%= form_with model: [answer, AnswerComment.new] do |f| %>
+                 <%= f.text_area :comment, rows: '5', placeholder: "コメントをここに" %>
+                 <%= f.submit "送信する" %>
+               <% end %>
+              <% end %>
+            <% @answer.answer_comments.each do |answer_comment| %>
+               <%= answer_comment.user.name %>
+               <%= answer_comment.created_at.strftime('%Y/%m/%d') %>
+               <%= answer_comment.comment %>
             <% end %>
            <% end %>
        </tbody>
