--- a/app/views/public/searches/search.html.erb
+++ b/app/views/public/searches/search.html.erb
@@ -1,4 +1,4 @@
-<h2>Results index</h2>
+<h2>Results index(public)</h2>
 
 <table class="table table-hover table-inverse">
   <!--検索対象モデルがUserの時 -->
@@ -15,8 +15,8 @@
     <tbody>
       <% @questions.each do |question| %>
         <tr>
-          <td><%= question.user.name %></td>
-          <td><%= question.question_content %></td>
+          <td><%=link_to question.question_content, question_path(question.id) %>
+              <%= question.created_at.strftime('%Y/%m/%d') %></td>
         </tr>
       <% end %>
     </tbody>
