カテゴリーごとの表示がうまくいかない

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -69,10 +69,10 @@
                <a class="nav-item nav-link active" aria-current="page" href='/questions'>Q&A一覧</a>
               </div>
               <div class="p-2">
-               <a class="nav-item nav-link disabled" aria-current="page" href="#">カテゴリ一覧</a>
+               <a class="nav-item nav-link active" aria-current="page" href="/categories">カテゴリ一覧</a>
               </div>
               <div class="p-2">
-               <a class="nav-item nav-link disabled" aria-current="page" href="#">SNS投稿一覧</a>
+               <a class="nav-item nav-link disabled" aria-current="page" href="#"></a>
               </div>
             </div>
            </ul>
