--- a/app/views/public/categories/index.html.erb
+++ b/app/views/public/categories/index.html.erb
@@ -5,7 +5,7 @@
      <ol class="list-group list-group-flush list-group-numbered">
        
        
-       <a class="list-group-item" href="#">お迎え前</a>
+       <a class="list-group-item" href="/categories/before">お迎え前</a>
        <a class="list-group-item" href="#">飼育方法</a>
        <a class="list-group-item" href="#">知識</a>
        <a class="list-group-item" href="#">食・健康</a>
