--- a/app/views/public/categories/index.html.erb
+++ b/app/views/public/categories/index.html.erb
@@ -6,11 +6,11 @@
        
        
        <a class="list-group-item" href="/categories/before">お迎え前</a>
-       <a class="list-group-item" href="#">飼育方法</a>
-       <a class="list-group-item" href="#">知識</a>
-       <a class="list-group-item" href="#">食・健康</a>
-       <a class="list-group-item" href="#">病気・ケガ</a>
-       <a class="list-group-item" href="#">その他</a>
+       <a class="list-group-item" href="/categories/breeding">飼育方法</a>
+       <a class="list-group-item" href="/categories/knowledge">知識</a>
+       <a class="list-group-item" href="/categories/food">食・健康</a>
+       <a class="list-group-item" href="/categories/illness">病気・ケガ</a>
+       <a class="list-group-item" href="/categories/others">その他</a>
    
     
      </ol>
