--- a/app/views/public/users/edit.html.erb
+++ b/app/views/public/users/edit.html.erb
@@ -25,17 +25,18 @@
     </div>
     <div class="text-left">
       <label for="user_name">名前</label>
-      <%= f.text_field :name, autofocus: true,class:"form-control name"%>
+      <%= f.text_field :name, autofocus: true,class:"form-control mb-4 name"%>
     </div>
     <div class="text-left">
-      <label for="user_introduction">自己紹介</label>
+      <label for="user_introduction ">自己紹介</label>
       <%= f.text_area :introduction, autofocus: true,class:"form-control introduction"%>
     </div>
-    <div class="form-group">  
+    <div class="form-group col-12">  
       <%= f.submit "更新",class:"btn btn-lg btn-block btn-info mt-5" %>
     </div>
    <% end %>
 
     </div>
   </div>
+</div>
 </div>
