--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -12,21 +12,21 @@
     <div class="text-right">
       <%= link_to 'ログアウト', destroy_admin_session_path, method: :delete %>
     </div>
-  
+
       <%= link_to "ユーザー一覧", admin_dashboards_path %>
       <%= link_to "カテゴリ一覧", admin_categories_path %>
       <%= link_to "質問一覧", admin_questions_path %>
-      <%= link_to "回答一覧", admin_questions_path %>
-      <%= link_to "コメント一覧", admin_questions_path %>
-      
-      
+      <%= link_to "回答一覧", admin_answers_path %>
+      <%= link_to "コメント一覧", admin_questions_path, class: "disabled" %>
+
+
     <%= form_with url: admin_search_path, local: true, method: :get do |f| %>
       <%= f.text_field :word %>
-      <%= f.select :range, options_for_select([['User'], ['Question']]) %>
+      <%= f.select :range, options_for_select([['User'], ['Question'],['Answer']]) %>
       <%= f.select :search, options_for_select([["完全一致","perfect_match"], ["前方一致","forward_match"],  ["後方一致","backward_match"], ["部分一致","partial_match"]]) %>
       <%= f.submit "検索", class: "btn btn-primary" %>
     <% end %>
-      
+
   <% end %>
   <%= yield %>
 </body>
