--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,6 +1,6 @@
 <div class="container px-5 px-sm-0">
- <div class="row">
-  <div class="col-md-8">
+ <div class="row py-5">
+  <div class="border col-md-8">
    <div class="border px-3 my-3 bg-light text-dark text-center">
     <h3 class="p-2"> <span>新着</span>　回答募集</h3>
     </div>
