--- a/app/views/public/categories/illness.html.erb
+++ b/app/views/public/categories/illness.html.erb
@@ -1,9 +1,15 @@
-<div class="container px-5 px-sm-0">
- <div class="row">
-  <div class="col-md-8">
-    
-       <h3>カテゴリー：病気・ケガ</h3>
+<style>
+  .bg01 {background: url("<%= asset_path('buncyo4.jpg') %>") #F8F9FB no-repeat bottom right/ contain;}
+ </style>
 
+
+
+<div class="container-fluid my-5 bg01">
+ <div class="row py-5 px-5">
+  <div class="border col-md-8 bg-white ">
+    <div class="border px-5 my-3 bg-light text-dark text-center">
+       <h3>カテゴリー：病気・ケガ</h3>
+    </div>
    
      <table class="table table-hover table-inverse">
 
