--- a/app/views/public/categories/index.html.erb
+++ b/app/views/public/categories/index.html.erb
@@ -1,8 +1,17 @@
-<div class="container px-5 px-sm-0">
- <div class="row">
-  <div class="col-md-8 col-xl-4">
+<style>
+  .bg01 {background: url("<%= asset_path('buncyo3.jpg') %>") #DDCEC4 no-repeat bottom right/ contain;}
+ </style>
+
+
+
+<div class="container-fluid my-5 bg01">
+ <div class="row py-5 px-5">
+  <div class="border col-md-8 bg-white ">
+    <div class="border px-5 my-3 bg-light text-dark text-center">
     <h1>カテゴリー一覧</h1>
-     <ol class="list-group list-group-flush list-group-numbered">
+    </div>
+    
+     <ol class="list-group list-group-flush list-group-numbered px-5">
        
        
        <a class="list-group-item" href="/categories/before">お迎え前</a>
