--- a/app/views/public/questions/new.html.erb
+++ b/app/views/public/questions/new.html.erb
@@ -1,9 +1,17 @@
-<div class="container px-5 px-sm-0">
- <div class="row">
-  <div class="col-md-8">
+<style>
+  .bg01 {background: url("<%= asset_path('buncyo5.jpg') %>") #555C2A no-repeat bottom right/ contain;}
+ </style>
+
+
+
+<div class="container-fluid my-5 bg01">
+ <div class="row py-5 px-5 ">
+  <div class="border col-md-8 bg-white pb-3">
+    <div class="border px-5 my-3 bg-light text-dark text-center">
 
 <h2 class="mt-3">質問投稿</h2>
-
+    </div>
+    
 <%= form_with model: @question do |f| %>
   <div class="form-group">
   <label>質問文</label>
