--- a/app/views/public/questions/new.html.erb
+++ b/app/views/public/questions/new.html.erb
@@ -6,7 +6,7 @@
 
 <div class="container-fluid my-5 bg01">
  <div class="row py-5 px-5 ">
-  <div class="border col-md-8 bg-white pb-3">
+  <div class="rounded border col-md-8 bg-white pb-3">
     <div class="border px-5 my-3 bg-light text-dark text-center">
 
 <h2 class="mt-3">質問投稿</h2>
