--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -4,15 +4,14 @@
 
 <div class="container-fluid my-5 bg00">
 <div class="row py-3 px-3">
-  
-<div class="border col-sm-12 col-md-8 col-lg-7 px-5 px-sm-0 mx-auto bg-white text-dark ">
+ <div class="rounded border col-sm-12 col-md-8 col-lg-7 mx-auto px-4 bg-white text-dark shadow">
     <h2>User info</h2>
-   <div class="d-flex">
-     <div class="flex-shrink-0 ">
-       <div class="d-flex justify-content-end">
+  <div class="d-flex">
+    <div class="flex-shrink-0 ">
+     <div class="d-flex justify-content-end">
         <%= image_tag @user.get_image_icon(100,100) %>
      </div>
-     </div>
+    </div>
    <div class="flex-grow-1 ms-3 ">
      <table class="table">
        <tbody>
@@ -24,24 +23,25 @@
          <td>自己紹介</td>
          <td><%= @user.introduction %></td> 
         </tr>
-    </tbody></table>
-   <div class="d-flex justify-content-end">
-   <div class="col-4">
+       </tbody>
+      </table>
+    <div class="d-flex justify-content-end">
+      <div class="col-4 p-3">
       <%= link_to  edit_user_path,class:"btn btn-outline-secondary btn-block" do %>
         <i class="fa-solid fa-user-gear"></i>
       <% end %>
       <%= link_to "退会する", withdrawl_user_path(@user.id), method: :patch, data: { confirm: '本当に削除しますか？' }  %>
       </div>
-      </div>
+    </div>
    </div>
-   </div>
-</div>
+  </div>
+ </div>
 </div>
  
     
     <!-- ユーザーの投稿一覧 -->
 <div class="row py-3 px-3">
-<div class="border col-md-8 mx-auto bg-white text-dark ">
+<div class="rounded border col-md-8 mx-auto p-4 bg-white text-dark shadow">
   
   <ul class="nav nav-tabs" id="myTab" role="tablist">
     <li class="nav-item" role="presentation">
